--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,7 +1,7 @@
 .sakarlogo{
-    background-image: url("../images/logo.png");
+    background-image: url("../images/logo4.png");
     background-size: cover;
     background-repeat: no-repeat;
-    height:70px;
+    height:80px;
     width:140px;
 }
