--- a/src/styles/searchbar.css
+++ b/src/styles/searchbar.css
@@ -1,5 +1,5 @@
 .align-serch-bar{
-    padding-top: 25%;
+    padding-top: 15%;
     padding-left: 45%;
     padding-right: 20%;
 
@@ -12,7 +12,25 @@
 .form-control, .search-job .form-group .form-control.btn{
     border-radius: 25px;
 }
+@media (max-width: 1824px) {
+    .align-serch-bar{
+        padding-top: 20%;
+        padding-left: 25%;
+        padding-right: 20%;
+    
+    }
+    
+}
 
+@media (max-width: 1224px) {
+    .align-serch-bar{
+        padding-top: 25%;
+        padding-left: 25%;
+        padding-right: 20%;
+    
+    }
+    
+}
 @media (max-width: 992px) {
     .align-serch-bar{
         padding-top: 30%;
